--- a/shard.yml
+++ b/shard.yml
@@ -12,8 +12,11 @@ description: |
 dependencies:
   db:
     github: crystal-lang/crystal-db
+development_dependencies:
   spectator:
     github: icy-arctic-fox/spectator
+  sqlite3:
+    github: crystal-lang/crystal-sqlite3
 
 scripts:
   postinstall: crystal src/friendly_id/install.cr
